name:                manual-stg-experiment
version:             0.1.0.0
license:             BSD3
author:              Csaba Hruska
maintainer:          csaba.hruska@gmail.com
copyright:           2020 Csaba Hruska
category:            Compiler
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      .
  exposed-modules:
    StgLoopback
    StgSample

  build-depends:
      base
    , mtl
    , bytestring
    , ghc
    , ghc-paths

  default-language:    Haskell2010
